--- a/test.html
+++ b/test.html
@@ -1,23 +1,16 @@
+Content-type: text/html; charset: utf-8
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>add msg</title>
+<title>範例1</title>
 </head>
 <body>
-<p>請輸入新留言</p>
-<hr>
-<div >
-<fieldset>
-<legend>留言輸入表單</legend>
-<form method="post" action="addProduc.py">
 
-
-
-<input type="submit">
-
-</form>
-</fieldset>
-</div>
-</body>
-</html>
+add2BuyNum
+已購買商品!數量 : 15
+80
+<br><a href='index_client.py'>回主選單</a>
+</body></html>
