--- a/addProducForm.html
+++ b/addProducForm.html
@@ -2,20 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>add msg</title>
+<title>Add product</title>
 </head>
 <body>
 <p>請輸入新留言</p>
 <hr>
 <div >
 <fieldset>
-<legend>留言輸入表單</legend>
+<legend>商品資料輸入表單</legend>
 <form method="post" action="addProduc.py">
-輸入商品名稱<input type="text" name='name'><br>
-輸入商品介紹<textarea name='intro'></textarea ><br><!--<input type="textarea" >-->
-輸入賣家    <input type="text" name='seller'><br>
-輸入商品價格<input type="text" name='price'><br>
-輸入商品存貨<input type="text" name='invenNum'><br>
+商品名稱<input type="text" name='name'><br>
+商品介紹<textarea name='intro'></textarea ><br><!--<input type="textarea" >-->
+賣家    <input type="text" name='seller'><br>
+商品價格<input type="text" name='price'><br>
+商品存貨<input type="text" name='invenNum'><br>
 <input type="submit">
 </form>
 </fieldset>
