--- a/addProducForm.html
+++ b/addProducForm.html
@@ -5,7 +5,7 @@
 <title>Add product</title>
 </head>
 <body>
-<p>請輸入新留言</p>
+<h1>商品上架</h1>
 <hr>
 <div >
 <fieldset>
@@ -14,8 +14,8 @@
 商品名稱<input type="text" name='name'><br>
 商品介紹<textarea name='intro'></textarea ><br><!--<input type="textarea" >-->
 賣家    <input type="text" name='seller'><br>
-商品價格<input type="text" name='price'><br>
-商品存貨<input type="text" name='invenNum'><br>
+商品價格<input type="number" name='price'><br>
+商品存貨<input type="number" name='invenNum'><br>
 <input type="submit">
 </form>
 </fieldset>
